--- a/index.html
+++ b/index.html
@@ -1,82 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Micro_Project_2</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Micro_Project_2</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <div class="logo">Dapper</div>
-    <ul>
-      <li>Home</li>
-      <li>About US</li>
-      <li>Information</li>
-      <li>More</li>
-    </ul>
-    <div class="search">
-    <form action="  ">
-      <input type="text" name="" id="" placeholder="search....">
-    </form>
-       <img src="./search-icon.JPG" alt="" id="search_icon">
+    <nav class="navbar">
+        <div class="dapper">Dapper</div>
+        <ul class="">
+            <li>Home</li>
+            <li>About US</li>
+            <li>Information</li>
+            <li>More &#x25BE;</li>
+        </ul>
+        <form action="">
+            <input type="text" placeholder="Search...">
+            <button type="submit"><img src="./search-icon.JPG" alt=""></button>
+        </form>
+        <div class="nav_icon">
+            <img src="./toggle_nav_icon.PNG" alt="" id="navicon">
+        </div>
+    </nav>
+    <div class="container1">
+        <div class="code_image"><img src="./code.jpg" alt=""></div>
+        <div class="box">It's not only who can benefit from this free online tool,if you are a programmer who's working on a.... </div>
     </div>
-    <img src="./toggle_nav_icon.PNG" alt="">
-  </header>
-  <div class="firstpara">
-    <img src="./code.jpg" alt="" id="image">
-    <textarea name="" id="textarea">hii</textarea>
-    <img src="./Social_Media.jpg" alt="" id="Social_Media">
-  </div>
-  <div class="secpara">
-    <div id="box1">Total Question's <br>200,000</div>
-    <div id="box2">Total Answer's <br> 105,000</div>
-    <div id="box3">Participated <br>10,000</div>
-    <div id="box4">Total Passed <br>6,000</div>
-  </div>
-  <div class="thirdpara">
-    <div class="box">
-        <div id="third">Your Info</div>
-        <div id="third1">Bookmarks</div>
-        <div id="third2">Settings</div>
+    <div class="social"><img src="./Social_Media.jpg" alt="">
     </div>
-    <div class="textarea1">
-   Your Information 
-     <br> 
-     <br>  
-   Name : Biswajeet Nayak
-  <br>
-  <br>
-   Email : biswajeetn1@gmail.com
-  <br>
-  <br>
-   phone:xxxxxxxxxx
-   <br>
-   <br>
-   Marks : 500.00
-   <br>
-   <br>
-   <br>
-   <br><br>
-   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-   
-  
-   <button type="submit" id="next">Next-></button>
-  </div>
-</div>
-<img src="./Emoji.jpg" alt="" id="emoji">
-</body>
+    <div class="container2">
+        <div class="box1 sky">Total Question's 200,000</div>
+        <div class="box1 blue">Total Answer's  105,000</div>
+        <div class="box1 violet">Participated <br>10,000</div>
+        <div class="box1 black">Total Passed <br>6,000</div>
+    </div>
+    <div class="container3">
+        <div class="Box">
+            <div class="box1 box2">YOUR INFO</div>
+            <div class="box1 box3">BOOKMARKS</div>
+            <div class="box1 box4">SETTINGS</div>
+        </div>
+        <div class="Information">
+            <h3>Your Information</h3> 
+            <br>
+            <pre>
+    Name : Biswajeet Nayak 
 
+    Email : biswajeetn1@gmail.com  
+
+    Phone : 6372809993
+
+    Marks : 500 
+            </pre>
+            <button type="submit">Next-></button>
+        </div>
+    </div>
+    <div class="emoji"><img src="./Emoji.jpg" alt=""></div>
+    <div class="space"></div>
+</body>
 </html>
